--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "engines": {
-    "node": "8.11.3"
+    "node": "^8.1"
   },
   "scripts": {
     "start": "node --expose-gc ./server.js"
