Rename repo and README

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "busy-api",
+  "name": "notifications-api",
   "version": "1.0.0",
+  "private": true,
   "license": "MIT",
   "engines": {
     "node": "^8.1"
