--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "^8.1"
+    "node": "8.x"
   },
   "scripts": {
     "start": "node --expose-gc ./server.js"
