--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "node": "8.x"
   },
   "scripts": {
-    "start": "node --expose-gc ./server.js"
+    "start": "node --expose-gc blockchainStream.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "busyjs": "^1.0.2",
@@ -22,5 +23,12 @@
     "sc2-sdk": "^1.0.2",
     "steem": "^0.7.4",
     "ws": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-node": "^11.0.0"
   }
 }
