change logic for socket

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "8.x"
   },
   "scripts": {
-    "start": "node --expose-gc blockchainStream.js"
+    "start": "node --expose-gc app.js"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
