--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "axios": "^0.19.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "busyjs": "^1.0.2",
@@ -22,6 +23,7 @@
     "redis": "^2.8.0",
     "sc2-sdk": "^1.0.2",
     "steem": "^0.7.4",
+    "swagger-ui-express": "^4.1.3",
     "ws": "^4.0.0"
   },
   "devDependencies": {
