--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lightrpc": "^1.0.0-beta.4",
     "lodash": "^4.17.5",
     "moment": "^2.23.0",
+    "morgan": "^1.9.1",
     "redis": "^2.8.0",
     "sc2-sdk": "^1.0.2",
     "steem": "^0.7.4",
