--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "@hivechain/dsteem": "^0.12.14",
     "axios": "^0.19.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
